<resources>
    <string name="app_name">Quizz</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificações</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="minimum_password">Senha muito curta, digite no minimo 6 caracteres! </string>
    <string name="auth_failed">Falha na autenticação, verifique seu email e a senha ou cadastre-se</string>
    <string name="change_email">Mudar Email</string>
    <string name="change_password">Mudar Senha</string>
    <string name="send_password_reset_email">Enviar senha resetar email</string>
    <string name="remove_user">Remover usuario</string>
    <string name="new_pass">Nova Senha</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Logar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome completo</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="facebook_app_id">411196399277809</string>
    <string name="fb_login_protocol_scheme">fb411196399277809</string>
    <string name="progress_warning">Atenção!</string>
    <string name="progress_loaging">Carregando...</string>


    <string-array name="years">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>

</resources>
